[AJA-304] Refactor: 반환할 리스트를 불변으로 리턴되도록 수정